--- a/work.html
+++ b/work.html
@@ -57,7 +57,7 @@
                 </div>
               </div>
               <div class="card col-md-3 col-12 contain mb-2">
-                <img src="./images/Projects/SocialMediaTemplate.PNG" style="height: 100%;">
+                <img src="./images/Projects/SocialMediaTemplate.png" style="height: 100%;">
                 <div class="card-img-overlay project-1 d-flex flex-column justify-content-center text-center text-white">
                   <a class="card-title" href="https://github.com/AhmedSaber07/SocialMediaTemplate" target="_blank">Social Media Template</a>
                   <p class="card-text"><small>Web Design</small></p>
